--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@emotion/native": "^11.9.3",
+    "@emotion/react": "^11.9.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
@@ -36,7 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "^18.0.14",
     "@types/react-native": "~0.66.13",
     "jest": "^26.6.3",
     "jest-expo": "~45.0.0",
